--------------------------------------------------------------------------------------------------
Release notes version 1.9.5_beta : Enhancements, modifications and corrected bugs since version 1.9.4 :
--------------------------------------------------------------------------------------------------
26/09/24 (TRUST) Change       : mpi4py upgraded from 3.0.3 to 4.0.0.
03/09/24 (TRUST) GPU          : A1000, A2000, H100 GPUs and Cuda 12.x supported. Add ./configure -kokkos_hip option to build on AMD with HIP Kokkos backend (still buggy) so default is still OpenMP-target backend (with performance issue on MI250)
03/09/24 (TRUST) GPU          : VEF convection schemes muscl_new and EF_stab available
03/09/24 (TRUST) GPU          : Complete porting for VEF dicretization of Quasi-compressible module and wall laws for turbulence models. Optimization with a lot H2D&D2H copies suppressed
25/07/24 (TRUST) Bug fix      : Performance regression fixed in IJK (seen in FT application in TrioCFD)
18/07/24 (TRUST) Fix          : Possible to visualize surface fields issued from Champ_post_extraction with VisIt
12/07/24 (TRUST) GPU          : Enable HIP support in PETSc to get Hypre multigrid available on AMD GPU with: petsc_gpu gcp|gmres { precond boomeramg { } ... }
12/07/24 (TRUST) GPU          : New available features for VEF discretization: Quasi-compressible (partial), Wale and Smagorinski turbulence models, Semi-implicit scheme, Sources term (Boussinesq, Canal_perio)
09/07/24 (TRUST) New feature  : Add new problem/equation Pb_Multiphase_Enthalpie/Energie_Multiphase_Enthalpie : resolution in h not in T
--------------------------------------------------------------------------------------------------
Release notes version 1.9.4 : Enhancements, modifications and corrected bugs since version 1.9.3 :
--------------------------------------------------------------------------------------------------