@@ -100,7 +100,7 @@ do
       exit 0
    elif [ "$1" = -doc ]
    then
-      [ "$TRUST_DISABLE_JUPYTER" = 1 ] && echo "Error: Jupyter not installed while Run_fiche -doc opens a jupyter notebook. Contact TRUST support team." && exit -1
+      [ "$TRUST_DISABLE_JUPYTER" = 1 ] && echo "Warning: Jupyter not installed while Run_fiche -doc opens a jupyter notebook. try to use jupyter-notebook installed on your system"
       cp -r $TRUST_ROOT/Validation/Rapports_automatiques/Verification/SampleFormJupyter $TRUST_TMP/.
       prm=$TRUST_TMP/SampleFormJupyter/SampleFormJupyter.ipynb
       echo "----------------------------------------------------------------------"
