@@ -839,7 +839,7 @@ $$
 
 \item Check the fluid and solid characteristics inside the docond.data file.
 
-\item This coupled problem is constituted by 2 domains of calculation with a mesh of 10x10 cells ($\Delta x = \Delta y = 0.1m$) created with 3 blocks. 
+\item This coupled problem is constituted by 2 domains of calculation with a mesh of 10x10 cells ($\Delta x = \Delta y = 0.1m$). 
 
 \item Now open your data file with "Plot2D" tool:\\
 \textbf{trust -evol\index{trust -evol} docond  \&} \\
