@@ -1,6 +1,8 @@
 --------------------------------------------------------------------------------------------------
 Release notes version 1.9.5_beta : Enhancements, modifications and corrected bugs since version 1.9.4 :
 --------------------------------------------------------------------------------------------------
+26/09/24 (TRUST) Change       : cmake upgraded from 3.22 to 3.30.
+26/09/24 (TRUST) Change       : python upgraded from 3.7 to 3.12.
 26/09/24 (TRUST) Change       : mpi4py upgraded from 3.0.3 to 4.0.0.
 03/09/24 (TRUST) GPU          : A1000, A2000, H100 GPUs and Cuda 12.x supported. Add ./configure -kokkos_hip option to build on AMD with HIP Kokkos backend (still buggy) so default is still OpenMP-target backend (with performance issue on MI250)
 03/09/24 (TRUST) GPU          : VEF convection schemes muscl_new and EF_stab available
